<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/new_login_gradients"
    tools:context="com.example.ahmadsb.askjce.loginUser.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etxt_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/white" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Pink"
                android:layout_marginLeft="45sp"/>

            <EditText
                android:id="@+id/etxt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/white" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Pink"
                android:layout_marginLeft="45sp"/>

            <EditText
                android:id="@+id/etxt_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/phoneNumber"
                android:inputType="number"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/white" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Pink"
                android:layout_marginLeft="45sp"/>

            <EditText
                android:id="@+id/etxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/white" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Pink"
                android:layout_marginLeft="45sp"/>

            <EditText
                android:id="@+id/etxt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/ConfirmPasswod"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/white" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Pink"
                android:layout_marginLeft="45sp"/>



            <Button
                android:id="@+id/btn_register"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>