<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmadsb.askjce.tabprofile.SettingActivity"
    android:background="@color/white"
  >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/ed_setting_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/black" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <EditText
                android:id="@+id/etxt_setting_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/call"
                android:inputType="number"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/black" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Pink"/>






            <Button
                android:id="@+id/btn_setteing"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100sp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
