<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@drawable/image_user"
                app:civ_border_color="#fff"
                app:civ_border_width="2dp"
                android:layout_gravity="right"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_UserName"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:hint="username"
                android:textSize="20sp"
                android:ems="10"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#000"

                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:ems="10"
            android:text="@string/myPost"
            android:textColor="#000"
            android:fontFamily="casual"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            />
        <TextView
            android:id="@+id/tv_fromlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="From"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/tv_tolocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_flag_black_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/fromLocation"
            android:textColor="#000"
            android:maxLines="1"
            android:padding="8dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/date"
                android:gravity="left"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                />

            <TextView
                android:id="@+id/tv_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_access_time_black_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/time"
                android:gravity="left"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/Gray"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            ></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/Gray2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <com.like.LikeButton

                    android:id="@+id/star_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:circle_end_color="@android:color/holo_blue_dark"
                    app:circle_start_color="@android:color/holo_blue_bright"
                    app:dots_primary_color="@android:color/holo_blue_light"
                    app:dots_secondary_color="@android:color/holo_blue_dark"
                    android:background="@color/white"
                    app:icon_size="22dp"
                    app:like_drawable="@drawable/thumb_on"
                    app:unlike_drawable="@drawable/thumb_off"
                    android:layout_weight="1"


                    />
                <TextView
                    android:id="@+id/tv_Like"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:background="#fff"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/like"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    />



            </LinearLayout>
            <TextView

                android:id="@+id/tv_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableLeft="@drawable/ic_mode_comment_black_24dp"
                android:drawablePadding="12dp"
                android:text="@string/comment"
                android:textSize="20sp"
                android:ems="10"
                android:gravity="center_vertical"
                android:layout_gravity="right"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"

                />



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="@color/Gray3"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/white"
            />

    </LinearLayout>

</LinearLayout>