<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/new_login_gradients"
    tools:context="com.example.ahmadsb.askjce.loginUser.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="48dp"
                android:padding="16dp"
                android:src="@drawable/ic_directions_car_black_24dp"
                />
            <LinearLayout
                android:id="@+id/layout_visibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/massage_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/pink2"
                    />
                <EditText
                    android:id="@+id/name_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/white" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightPink"/>

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/white" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightPink"/>
                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="#fff"
                    android:text="@string/RememberMe"
                    android:padding="8dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/LogIn"
                android:textColor="@color/darkPik"
                android:textAllCaps="false"
                android:padding="8dp"
                android:clickable="true"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_marginTop="24dp"
                />

            <Button
                android:id="@+id/btn_signup"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/SignUp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forget your Password? "
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginBottom="16dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightPink"/>



            <!--<com.facebook.login.widget.LoginButton-->
                <!--android:id="@+id/login_button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="104dp"-->
                <!--android:layout_marginEnd="8dp"-->
                <!--android:layout_marginStart="8dp"-->
                <!--android:layout_marginTop="12sp"-->

                <!--android:paddingBottom="16sp"-->
                <!--android:paddingLeft="16sp"-->
                <!--android:paddingRight="16sp"-->
                <!--android:paddingTop="16sp"-->
                <!--/>-->


        </LinearLayout>


    </ScrollView>

</LinearLayout>
